added siye header

--- a/biome.json
+++ b/biome.json
@@ -23,6 +23,12 @@
       },
       "security": {
         "noDangerouslySetInnerHtml": "off"
+      },
+      "nursery": {
+        "noLeakedRender": "off"
+      },
+      "style": {
+        "useBlockStatements": "off"
       }
     },
     "domains": {
