--- a/biome.json
+++ b/biome.json
@@ -30,6 +30,9 @@
       },
       "style": {
         "useBlockStatements": "off"
+      },
+      "performance":{
+        "noNamespaceImport": "off"
       }
     },
     "domains": {
